--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "phonebook",
+  "homepage": "https://kmk9000.github.io/phonebook",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
